# rv32imac-os

./: .gitignore  Cargo.toml  Dockerfile  Makefile  build.rs  compose.yaml  cspell.jsonc  readme.md  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: qemu-help.md
src/kernel/: Cargo.toml  addr.rs  allocator.rs  console.rs  kernel.ld  lib.rs  main.rs  pages.rs  proc.rs  riscv.rs  sbi.rs  syscall_num.rs  trap.rs
src/user/: Cargo.toml  build.rs  lib.rs  user.ld
